# gradle-wrapper-validator

./: .deepsource.toml  .dockerignore  .gitignore  .markdownlint.yaml  .mergify.yml  .tool-versions  Cargo.toml  Dockerfile  LICENSE  README.md  cargo-plugins.toml  deny.toml  justfile  krabby.sh  licenserc.toml  run  run.sh
.cargo/: config.toml
.github/: renovate.json
.github/actions/setup-rust/: action.yaml  action.yml
.github/workflows/: cd.yml  ci.yml  docker-deploy.yml  docs.yml
docs/: changelog.md  contributing.md  development.md  installing.md  readme.md  releasing.md  using.md  website.json
scripts/: cross-build.sh  flex-build.sh  install-requirements.sh
src/: cli.rs  gwv.rs  main.rs  validator.rs
src/validator/: fetch_checksums.rs  find_wrappers.rs  gradle_releases.rs  local_projects.rs  models.rs
test-data/valid/gradle7/gradle/wrapper/: gradle-wrapper.properties
test_data/gradle7/gradle/wrapper/: gradle-wrapper.properties
tests/: integration.rs
