[package]
name = "gwv"
version = "0.4.0"
edition = "2021"
authors = ["ubiratan.f.soares@gmail.com"]
description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
repository = "https://github.com/dotanuki-labs/gradle-wrapper-validator"
readme = "README.md"
license = "MIT"
publish = true
categories = ["command-line-utilities"]
keywords = ["supply-chain", "android", "gradle", "ci", "devops"]

[package.metadata]
msrv = "1.82.0"

[dependencies]
anyhow = "=1.0.99"
clap = { version = "=4.5.47", features = ["derive"] }
human-panic = "=2.0.3"
serde = { version = "=1.0.200", features = ["derive"] }
walkdir = "=2.5.0"
sha256 = "=1.5.0"
reqwest = { version = "=0.12.23", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"

[[bin]]
name = "gwv"

[profile.release]
strip = true
lto = true
codegen-units = 1
