[package]
name = "gwv"
version = "0.5.0"
edition = "2024"
authors = ["dotanuki.labs@gmail.com"]
description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
repository = "https://github.com/dotanuki-labs/gradle-wrapper-validator"
readme = "README.md"
license = "MIT"
publish = true
categories = ["command-line-utilities"]
keywords = ["supply-chain", "android", "gradle", "ci", "devops"]

[package.metadata]
msrv = "1.89.0"

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.49", features = ["derive"] }
human-panic = "=2.0.3"
serde = { version = "=1.0.228", features = ["derive"] }
walkdir = "=2.5.0"
sha256 = "=1.6.0"
reqwest = { version = "=0.12.24", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"

[[bin]]
name = "gwv"

[profile.release]
strip = true
lto = true
codegen-units = 1
