# Copyright 2025 Dotanuki Labs
# SPDX-License-Identifier: MIT

[package]
name = "gwv"
version = "0.5.0"
edition = "2024"
authors = ["dotanuki.labs@gmail.com"]
description = "A validator for gradle/wrapper jar binaries, intended to be used in CI pipelines"
repository = "https://github.com/dotanuki-labs/gradle-wrapper-validator"
readme = "README.md"
license = "MIT"
publish = true
categories = ["command-line-utilities"]
keywords = ["supply-chain", "android", "gradle", "ci", "devops"]

[package.metadata]
msrv = "1.89.0"

[dependencies]
anyhow = "=1.0.101"
clap = { version = "=4.5.58", features = ["derive"] }
human-panic = "=2.0.6"
serde = { version = "=1.0.228", features = ["derive"] }
walkdir = "=2.5.0"
sha256 = "=1.6.0"
reqwest = { version = "=0.13.2", features = ["json"] }
reqwest-middleware = "=0.5.1"
reqwest-retry = "=0.9.1"
tokio = { version = "=1.49.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "=2.1.2"
predicates = "=3.1.3"

[[bin]]
name = "gwv"

[profile.release]
strip = true
lto = true
codegen-units = 1
